cabal-version:       2.4
name:                advent2020
version:             0.1.0.0
category:            None
synopsis:            Advent of Code 2020 Solutions
description:         These are my cleaned-up solutions to the Advent of Code
                     programming game. <https://adventofcode.com>
license:             ISC
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@gmail.com
copyright:           2020 Eric Mertens
homepage:            https://github.com/glguy/advent2020
bug-reports:         https://github.com/glguy/advent2020/issues
build-type:          Simple
tested-with:         GHC==8.10.2

source-repository head
  type: git
  location: https://github.com/glguy/advent2020

library
  hs-source-dirs:      common
  default-language:    Haskell2010

  exposed-modules:
    Advent
    Advent.Coord
    Advent.PQueue
    Advent.Search
    Advent.Queue
    Advent.Visualize

  build-depends:
    base         ^>= 4.14,
    containers   ^>= 0.6,
    JuicyPixels  ^>= 3.3.2,
    megaparsec   ^>= 9.0,
    vector       ^>= 0.12,


test-suite doctests
  type:          exitcode-stdio-1.0
  ghc-options:   -threaded
  main-is:       doctests.hs
  default-language:    Haskell2010

  build-depends:
    base,
    doctest   ^>= 0.17,
    directory ^>= 1.3,
    filepath  ^>= 1.4,

executable Day01
  main-is:             Day01.hs
  build-depends:       advent2020, base
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day02
  main-is:             Day02.hs
  build-depends:       advent2020, base
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day03
  main-is:             Day03.hs
  build-depends:       advent2020, base, vector
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day04
  main-is:             Day04.hs
  build-depends:       advent2020, base
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day05
  main-is:             Day05.hs
  build-depends:       advent2020, base
  hs-source-dirs:      execs
  default-language:    Haskell2010
