cabal-version:       2.4
name:                advent2020
version:             0.1.0.0
category:            None
synopsis:            Advent of Code 2020 Solutions
description:         These are my cleaned-up solutions to the Advent of Code
                     programming game. <https://adventofcode.com>
license:             ISC
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@gmail.com
copyright:           2020 Eric Mertens
homepage:            https://github.com/glguy/advent2020
bug-reports:         https://github.com/glguy/advent2020/issues
build-type:          Simple
tested-with:         GHC==8.10.2
data-files:          inputs/*.txt

source-repository head
  type: git
  location: https://github.com/glguy/advent2020

flag bench
  description: Enable building benchmark harness
  default: False
  manual: True

library
  hs-source-dirs:      common
  default-language:    Haskell2010

  exposed-modules:
    Advent
    Advent.Chinese
    Advent.Coord
    Advent.PQueue
    Advent.Queue
    Advent.Search
    Advent.Format
    --Advent.Visualize

  other-modules:
    Advent.Format.Lexer
    Advent.Format.Parser
    Advent.Format.Types

  build-tool-depends: alex:alex, happy:happy

  build-depends:
    base         ^>= 4.14,
    array        ^>= 0.5.4,
    containers   ^>= 0.6,
    megaparsec   ^>= 9.0,
    vector       ^>= 0.12,
    integer-gmp  ^>= 1.0,
    template-haskell,
    --JuicyPixels  ^>= 3.3.2,

  if flag(bench)
    exposed-modules: Advent.Bench
    build-depends:
      criterion    ^>= 1.5.9,
      deepseq      ^>= 1.4,

library dlx
  exposed-modules: DLX
  build-depends: base, containers
  default-language: Haskell2010
  c-sources: dlx/dlx.c
  include-dirs: dlx
  hs-source-dirs: dlx

test-suite doctests
  type:          exitcode-stdio-1.0
  ghc-options:   -threaded
  main-is:       doctests.hs
  default-language: Haskell2010

  build-depends:
    base,
    doctest   ^>= 0.17,
    directory ^>= 1.3,
    filepath  ^>= 1.4,

executable Day01
  main-is:             Day01.hs
  build-depends:       advent2020, base
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day02
  main-is:             Day02.hs
  build-depends:       advent2020, base
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day03
  main-is:             Day03.hs
  build-depends:       advent2020, base, array
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day04
  main-is:             Day04.hs
  build-depends:       advent2020, base
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day05
  main-is:             Day05.hs
  build-depends:       advent2020, base
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day06
  main-is:             Day06.hs
  build-depends:       advent2020, base
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day07
  main-is:             Day07.hs
  build-depends:       advent2020, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day08
  main-is:             Day08.hs
  build-depends:       advent2020, base, fgl
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day09
  main-is:             Day09.hs
  build-depends:       advent2020, base, vector
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day10
  main-is:             Day10.hs
  build-depends:       advent2020, base
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day11
  main-is:             Day11.hs
  build-depends:       advent2020, base, array
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day12
  main-is:             Day12.hs
  build-depends:       advent2020, base
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day13
  main-is:             Day13.hs
  build-depends:       advent2020, base
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day14
  main-is:             Day14.hs
  build-depends:       advent2020, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day15
  main-is:             Day15.hs
  build-depends:       advent2020, base, primitive
  ghc-options:         -O2
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day16
  main-is:             Day16.hs
  build-depends:       advent2020, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day17
  main-is:             Day17.hs
  build-depends:       advent2020, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day18
  main-is:             Day18.hs
  build-depends:       advent2020, base
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day18-alexhappy
  main-is:             Main.hs
  other-modules:       Lexer, Parser
  build-tool-depends:  alex:alex, happy:happy
  build-depends:       advent2020, base, array
  hs-source-dirs:      alexhappy-18
  default-language:    Haskell2010

executable Day19
  main-is:             Day19.hs
  build-depends:       advent2020, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day20
  main-is:             Day20.hs
  build-depends:       advent2020, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day21
  main-is:             Day21.hs
  build-depends:       advent2020, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day22
  main-is:             Day22.hs
  build-depends:       advent2020, base, containers, vector
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day23
  main-is:             Day23.hs
  build-depends:       advent2020, base, array
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day24
  main-is:             Day24.hs
  build-depends:       advent2020, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day25
  main-is:             Day25.hs
  build-depends:       advent2020, base, arithmoi
  hs-source-dirs:      execs
  default-language:    Haskell2010
