cabal-version:       2.4
name:                advent2020
version:             0.1.0.0
category:            None
synopsis:            Advent of Code 2020 Solutions
description:         These are my cleaned-up solutions to the Advent of Code
                     programming game. <https://adventofcode.com>
license:             ISC
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@gmail.com
copyright:           2020 Eric Mertens
homepage:            https://github.com/glguy/advent2020
bug-reports:         https://github.com/glguy/advent2020/issues
build-type:          Simple
tested-with:         GHC==8.10.2
data-files:          inputs/*.txt

source-repository head
  type: git
  location: https://github.com/glguy/advent2020

flag bench
  description: Enable building benchmark harness
  default: False
  manual: True

library
  hs-source-dirs:      common
  default-language:    Haskell2010

  exposed-modules:
    Advent
    Advent.Chinese
    Advent.Coord
    Advent.Format
    Advent.PQueue
    Advent.Queue
    Advent.Search

  other-modules:
    Advent.Format.Lexer
    Advent.Format.Parser
    Advent.Format.Types

  build-tool-depends: alex:alex, happy:happy

  build-depends:
    base         ^>= 4.14,
    array        ^>= 0.5.4,
    containers   ^>= 0.6,
    integer-gmp  ^>= 1.0,
    template-haskell ^>= 2.16,

  if flag(bench)
    exposed-modules: Advent.Bench
    build-depends:
      criterion    ^>= 1.5.9,
      deepseq      ^>= 1.4,

library dlx
  exposed-modules: DLX
  build-depends: base, containers
  default-language: Haskell2010
  c-sources: dlx/dlx.c
  include-dirs: dlx
  hs-source-dirs: dlx

test-suite doctests
  type:          exitcode-stdio-1.0
  ghc-options:   -threaded
  main-is:       doctests.hs
  default-language: Haskell2010

  build-depends:
    base,
    doctest   ^>= 0.17,
    directory ^>= 1.3,
    filepath  ^>= 1.4,

common day
  hs-source-dirs:      execs
  build-depends:       advent2020, base
  default-language:    Haskell2010

executable Day01
  import:              day
  main-is:             Day01.hs

executable Day02
  import:              day
  main-is:             Day02.hs

executable Day03
  import:              day
  main-is:             Day03.hs
  build-depends:       array

executable Day04
  import:              day
  main-is:             Day04.hs

executable Day05
  import:              day
  main-is:             Day05.hs

executable Day06
  import:              day
  main-is:             Day06.hs

executable Day07
  import:              day
  main-is:             Day07.hs
  build-depends:       containers

executable Day08
  import:              day
  main-is:             Day08.hs
  build-depends:       containers

executable Day09
  import:              day
  main-is:             Day09.hs
  build-depends:       vector

executable Day10
  import:              day
  main-is:             Day10.hs

executable Day11
  import:              day
  main-is:             Day11.hs
  build-depends:       array

executable Day12
  import:              day
  main-is:             Day12.hs

executable Day13
  import:              day
  main-is:             Day13.hs

executable Day14
  import:              day
  main-is:             Day14.hs
  build-depends:       containers

executable Day15
  import:              day
  main-is:             Day15.hs
  build-depends:       primitive
  ghc-options:         -O2

executable Day16
  import:              day
  main-is:             Day16.hs
  build-depends:       containers

executable Day17
  import:              day
  main-is:             Day17.hs
  build-depends:       containers

executable Day18
  import:              day
  main-is:             Day18.hs

executable Day19
  import:              day
  main-is:             Day19.hs
  build-depends:       containers

executable Day20
  import:              day
  main-is:             Day20.hs
  build-depends:       containers, array

executable Day21
  import:              day
  main-is:             Day21.hs
  build-depends:       containers

executable Day22
  import:              day
  main-is:             Day22.hs
  build-depends:       containers, vector

executable Day23
  import:              day
  main-is:             Day23.hs
  build-depends:       array

executable Day24
  import:              day
  main-is:             Day24.hs
  build-depends:       containers

executable Day25
  import:              day
  main-is:             Day25.hs
  build-depends:       arithmoi
